--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -77,7 +77,7 @@
   font-weight: 500;
 }
 .bg-container{
-  background-image: url('@/assets/img/bg-shape.png');
+  /* background-image: url('@/assets/img/bg-shape.png'); */
 }
 .railway-font{
   font-family: var(--railway-font);
@@ -414,7 +414,7 @@ h6 {
   width: 100% !important;
 }
 .vs-hero-wrapper {
-  background-image: url('@/assets/img/bg-shape.png');
+  /* background-image: url('@/assets/img/bg-shape.png'); */
   padding-top: 60px;
   background-position: center center;
   background-repeat: no-repeat;
